# hit-or-flop

./: .cursorrules  .gitignore  AGENTS.md  Makefile  README.md  main.py  pyproject.toml  requirements.txt
DATA/PROCESSED/GENRES DATA FOR LYRICS/: pop_A19.parquet  pop_J23.parquet  unpop_A19.parquet  unpop_JN23.parquet
DATA/raw/2018 Noviembre/No populares/: artist_cancion_unpop_N2018.parquet
DATA/raw/2019 Abril/No populares/: artist_cancion_unpop_A2019.parquet
DATA/raw/2019 Abril/Populares/: artist_cancion_pop_A2019.parquet  popus_A2019.txt
DATA/raw/LAST.FM DATA/: spotify_artists_genres_11.parquet
data/processed/: pop_N18.parquet  unpop_N18.parquet
data/raw/: artist_cancion_pop_M2024.parquet  artist_cancion_pop_N18.parquet  artist_cancion_unpop_Mar2025.parquet  popus_Abril_2021.txt  popus_J2023.txt  popus_M2024.txt  popus_Mar2025.txt  popus_N18.txt  unpopus_A2019.txt  unpopus_Mar2025.txt  unpopus_N2018.txt
docs/presentations/: Unique Value Proposition.pptx
docs/reports/: Guión presentación final.docx  Hit-or-flop - Report.docx  Milestone 2.docx  Objetivos proyecto.docx  State of the art.docx  _Memory.docx  descript_var.docx  guión final solo texto.docx
notebooks/eda/: ReglasAsociacion.Rmd  data_groupby.ipynb  data_w_song_genres_category.ipynb
notebooks/genres/: train_genre_predictor.ipynb
notebooks/lyrics/: sort_values_popularity.ipynb
notebooks/popularity/: model_selection.ipynb  new_features.ipynb  zero_inflated.ipynb
scripts/: apiazlyrics.py  train.py
src/data/: make_dataset.py
src/features/: build_features.py
src/models/: train_model.py
(+9 files in other folders)
