[project]
name = "hit-or-flop"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "catboost>=1.2.10",
    "imbalanced-learn>=0.14.1",
    "ipykernel>=7.2.0",
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.8",
    "mlflow>=3.11.1",
    "numpy>=2.4.4",
    "pandas<3.0.0",
    "protobuf<4.0.0",
    "pyarrow<24.0.0",
    "requests>=2.33.1",
    "ruff>=0.15.11",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
    "setuptools>=82.0.1",
    "xgboost>=3.2.0",
]
